# quant-factors

./: .gitignore  AGENTS.md  README.md
config/: github-project.json  project.env.example
datasets/: datasets.yaml
ideas/: 2026-06-28.json  2026-06-29.json  2026-06-30.json
prefect/: README.md  deploy.py  prefect.yaml  pyproject.toml
prefect/flows/: __init__.py  factor_validation.py  neutral_validation.py  test_factor_validation.py
prefect/tasks/: __init__.py  evaluate.py  report_to_worker.py
schemas/: dataset-schema.json  evaluation-schema.json  factor-expr-v1.md  idea-factor-sql-rules.txt  idea-generation-schema.json  idea-schema.json  validation-profile-schema.json
scripts/: __init__.py  backfill_factor_validation_metrics.py  benchmark_factor_validation_timing.py  build_idea_prompt.py  build_kernel_inputs.py  bundle_evaluate_kernel.py  compute_metrics.py  cursor_auth.py  deploy-qf-cloudflare.sh  e2e_local_orchestration.py  ensure_test_mlflow_experiment.py  evaluate_engine.py  evaluate_engine_cli.py  export_idea_generation_prompt.py  export_project_metrics.py  export_worker_eval_assets.py  factor_validation_runner.py  fetch_existing_ideas.py  fetch_idea_by_hash.py  fetch_pending_evaluations.py  force_cleanup_kernels.py  github_graphql.py  github_project_import_common.py  import_github_project_ideas.py  import_github_project_ideas_translate.py  jupyter_client.py  kaggle_kernel.py  mlflow_logger.py  monitor_kernel_load.py  neutralization_spec.py  parse_cursor_ideas.py  parse_project_idea.py  poll_factor_validation_status.py  requirements.txt  (+21 more)
(+209 files in other folders)
