[project]
name = "quant-factors-prefect"
version = "0.1.0"
description = "Prefect flows for quant-factors factor validation"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0.0",
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "mlflow>=2.14.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows", "tasks"]
